--- a/app/assets/stylesheets/facilities_management/long_list.scss
+++ b/app/assets/stylesheets/facilities_management/long_list.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the facilities_management/longList controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.CCS-fm-supplier-filter-container {
+  border-style: solid;
+  border-width: 1px;
+  border-color: silver;
+  padding-top:10px;
+}
+
+.CCS-fm-supplier-filter-container-grey{
+  background-color: #F8F8F8;
+  margin-top:5px;
+  margin-left:5px;
+  margin-right:5px;
+  margin-bottom:5px;
+  padding-bottom: 5px;
+}
+
+.CCS-fm-supplier-filter-check-boxes{
+  background-color: white;
+  margin-left:10px;
+  margin-right:10px;
+  max-width:250px;
+  margin-top:15px;
+}
+
+.CCS-fm-supplier-filter-check-box-label{
+  background-color:  white;
+  height:26px;
+}
