--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -1,5 +1,5 @@
 <a href="/facilities-management/select-locations" class="govuk-back-link">Back</a>
-<div id="service-error-message" name="service-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+<div id="service-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     There is a problem
   </h2>
@@ -23,7 +23,7 @@
   </p>
 </div>
 <div class="govuk-grid-column-two-thirds">
-  <div class="govuk-accordion" data-module="accordion" id="services-accordion" name="services-accordion">
+  <div class="govuk-accordion" data-module="accordion" id="services-accordion">
     <% @services.each do |service| %>
       <div class="govuk-accordion__section ">
         <div class="govuk-accordion__section-header">
@@ -44,6 +44,7 @@
                         <%= workPackage['name'] %>
                       </label>
                     </div>
+                  </div>
                 </fieldset>
               </div>
             <% end %>
@@ -53,28 +54,34 @@
     <% end %>
   </div>
   <p>
-    <%= link_to 'Continue', '/facilities-management/suppliers/longList', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id: 'save-services-link', name: 'save-services-link' %>
+  <form id="fm-services-form" name="fm-services-form" action="/facilities-management/suppliers/longList" method="post">
+    <input name="authenticity_token" type="hidden" value='<%= csrf_meta_tag %>' />
+    <input id="postedlocations" name="postedlocations" type="hidden" value=""/>
+    <input id="postedservices" name="postedservices" type="hidden" value=""/>
+    <a role='button' class='govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' id='save-services-link'>Continue</a>
+  </form>
+
   </p>
 </div>
 <div class="govuk-grid-column-one-third">
   <div class="filter-selection">
     <header>
       <div class="filter-selection__header">
-        <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
+        <a id="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
-          <span id="selected-service-count" name="selected-service-count" class="font-size--18">0</span>
+          <span id="selected-service-count" class="font-size--18">0</span>
           Services selected
         </h2>
       </div>
     </header>
     <ul class="govuk-!-padding-0 font-size--08">
-      <li style="word-break: keep-all;background-color: #EAEAEA" class="govuk-list">
+      <li class="govuk-list">
         <span class="govuk-!-padding-0">Contract Management</span>
       </li>
-      <li style="word-break: keep-all;background-color: #EAEAEA" class="govuk-list">
+      <li class="govuk-list">
         <span class="govuk-!-padding-0">Contract Mobilization</span>
       </li>
     </ul>
-    <ul id="selected-fm-services" name="selected-fm-services" class="govuk-!-padding-0 font-size--10"></ul>
+    <ul id="selected-fm-services" class="govuk-!-padding-0 font-size--10"></ul>
   </div>
-
+</div>
