--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -94,42 +94,59 @@ the import call to the parent GOVUK component) */
 
         .govuk-checkboxes {
             background-color: govuk-colour("white"); 
-            padding: 10px; 
             margin-top: govuk-spacing(1); 
         }
 
         .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
         .govuk-checkboxes__input {//the tick box border
-            height: 22px; 
-            width: 22px; 
-            top: 2px; 
+            height: 20px; 
+            width: 20px; 
+            top: 11px; 
+            left: 10px; 
+            border-width: 1px; 
         } 
 
         .govuk-checkboxes__input:checked + .govuk-checkboxes__label::after {//the tick
-            left: 4px; 
-            top: 7px; 
+            left: 13px; 
+            top: 15px; 
             width: 11px; 
             height: 5px; 
             border-width: 0 0 3px 3px; 
         } 
 
         .govuk-checkboxes__label {
-            padding: 0; 
+            padding: 5px; 
             font-size: $results-filters-labels-m;
         }
 
-        .govuk-checkboxes__item {
-            padding: 0 0 0 30px; 
+        .govuk-checkboxes__item { 
+            margin-bottom: 0; 
+            padding: 5px 10px 0 35px;  
+            border-top: 1px solid $govuk-border-colour; 
+
+            &:first-child {
+                border-top: none; 
+            }
         } 
 
-        .CCS-AT-show {
-            height: 26px;
-            width: 26px;
-            display: block;
-            position: absolute;
-            top: 0;
-            right: 0; 
+        .CCS-AT-show--fontsize {//matches .govuk-label--s
+            @include govuk-font($size: 19, $weight: bold);
+        }        
+
+        .CCS-AT-show {//button    
+            min-height: 30px;
+            width: 100%;
+            background-color: transparent; 
+            text-align: left; 
+            border: none; 
+            margin: 2px 0 3px 0; 
             cursor: pointer; 
+            padding: 0 0 0 10px; 
+
+            &:focus {
+                outline: 3px solid govuk-colour("yellow");
+                outline-offset: 0;
+            }
 
             span {//text-indent no good
                 position: absolute; 
@@ -141,10 +158,10 @@ the import call to the parent GOVUK component) */
             &::after {//the tick
                 content: '';
                 position: absolute;
-                top: 0;
-                left: 5px;
-                width: 14px;
-                height: 14px;
+                top: 6px;
+                right: 10px;
+                width: 10px;
+                height: 10px;
                 border-width: 0; 
                 border-style: solid;
                 border-color: govuk-colour("black");            
@@ -159,7 +176,7 @@ the import call to the parent GOVUK component) */
 
         .CCS-AT-checkbox-accordian.show {
             .CCS-AT-show::after {
-                top: 8px;
+                top: 13px;
                 border-width: 3px 3px 0 0; 
             } 
 
