--- a/app/views/apprenticeships/home/_search_apprenticeship.html.erb
+++ b/app/views/apprenticeships/home/_search_apprenticeship.html.erb
@@ -1,4 +1,13 @@
-<div class="xgovuk-grid-row xsupplier-record__header-group">
+<li>
+  <a href="/" class="govuk-heading-s govuk-link--no-visited-state CSS-no-underline"><%= result[:name] %></a><br>
+
+  <b><%= t('apprenticeships.home.search_results.result_level_label') %></b> <br>
+  <%= result[:level] %><br>
+  <b><%= result[:providers] %> <%= t('apprenticeships.home.search_results.providers_label') %></b>
+</li>
+
+
+<div class="xgovuk-grid-row supplier-record__header-group">
   <div class="xgovuk-grid-column-full">
     <h3 class="xgovuk-heading-m xgovuk-!-font-size-27 xgovuk-link"><%= result[:name] %></h3>
 
