--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -13,22 +13,23 @@
   </div>
 </div>
 
-<div id="ccs-at-results-filters" class="govuk-grid-row govuk-!-padding-top-4 CCS-AT-results-filters">
+<div class="govuk-grid-row govuk-!-padding-top-4 CCS-AT-results-filters">
+  <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
   
-  <div class="govuk-grid-column-one-third">
-
+  <section id="ccs-at-results-filters" class="govuk-grid-column-one-third">
+    <!-- start Levels filters -->
     <div class="govuk-form-group CCS-AT-results-filters__panel CCS-AT-results-filters--padding">
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
-      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
+      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input CCS-search-icon' %>
     </div>
 
     <div class="govuk-form-group CCS-AT-results-filters__heading-bloc">
       <h2 class="govuk-!-width-two-thirds govuk-heading-m">
         <%= t('.apply_filters_label') %>
       </h2>
-      <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'govuk-!-width-one-third ccs-no-print', id: 'clear-filters' %>
+      <%= link_to t('.clear_filters_link'), apprenticeships_search_path, role: 'button', class: 'govuk-!-width-one-third govuk-link--no-visited-state ccs-no-print', id: 'ccs-clear-filters' %>
     </div>
 
     <div class="govuk-form-group CCS-AT-results-filters__panel">
@@ -57,15 +58,66 @@
           </div>
         </div>
       </fieldset>
-    </div>    
 
-  </div>
+      <details class="govuk-details govuk-!-margin-top-6">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            <%= t('.explain_levels_link') %>
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          <%= t('.explain_levels_text') %>
+        </div>
+      </details>
 
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Two-thirds column</h1>
-    <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
-  </div>
+    </div>  
 
+    <!-- start Routes filters -->
+    <div class="govuk-form-group CCS-AT-results-filters__panel">
+      <fieldset class="govuk-fieldset CCS-AT-checkbox-accordian" aria-describedby="waste-hint">
+        <button type="button" class="CCS-AT-show CCS-AT-show--fontsize" aria-expanded="true" aria-controls="c2">
+          <%= t('.routes_label') %>
+        <span>&nbsp;Show</span>
+        </button>
+
+        <div id="c2" class="CCS-AT-checkboxes-wrap">
+          <div class="govuk-checkboxes">
+            <% routes.each do |route| %>
+              <div class="govuk-checkboxes__item">
+                <%= check_box_tag(
+                        "routes[]",
+                        route,
+                        false,
+                        class: "govuk-checkboxes__input",
+                        id: "route_#{route}"
+                    ) %>
+                <label class="govuk-label govuk-checkboxes__label" for="route_<%= route %>">
+                  <%= route %>
+                </label>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </fieldset>
+    </div>         
+
+  </section>
+
+  <section id="css-at-search-results" class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-m CSS-remove">Results</h2>
+    
+
+    <ul title="Results list" class="css-at-results-list">
+      <% results.each do |result| %>
+        <%= render 'search_apprenticeship', result: result %>
+      <% end %>
+    </ul>
+
+    <%= link_to t('.next'), '#', class: 'govuk-link' %>
+
+  </section>
+
+  <% end %>
 </div>
 
 
@@ -79,7 +131,7 @@
   <div class="govuk-grid-column-full">
     
 
-    <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
+    
       <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-one-third">
@@ -166,6 +218,6 @@
           </div>
         </div>
       </div>
-    <% end %>
+    
   </div>
 </div>
