updates to v2 prototype

--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -28,7 +28,8 @@
 
       <p class="govuk-body"><%= t('.this_service_will_help') %></p>
 
-      <%= link_to t('.start_now'), apprenticeships_search_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_apprenticeships') %>
+
+<%= link_to t('Continue'), 'find_apprentices' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
 
     </div>
   </div>
