--- a/app/views/apprenticeships/home/requirement.html.erb
+++ b/app/views/apprenticeships/home/requirement.html.erb
@@ -106,7 +106,7 @@
 </div>
 <br/>
 <br/>
-      <%= link_to t('Find training providers'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
+      <%= link_to t('Find training providers'), 'supplier_search', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
 
     </div>
   </div>
