--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -98,5 +98,6 @@
         </div>
       </div>
     <% end %>
-  </div>
+  </div>)
+<%= link_to t('Continue'), 'building_services' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
 </div>
