--- a/app/views/apprenticeships/home/building_services.html.erb
+++ b/app/views/apprenticeships/home/building_services.html.erb
@@ -3,12 +3,37 @@
 
 <%= form_tag apprenticeships_search_results_path, method: :get do %>
 
-  <label class="govuk-label govuk-label--m" for="search">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+  <span id="more-detail-hint" class="govuk-hint">
+    Apprenticeship standard
+  </span>
+  <label class="govuk-label govuk-label--l" for="search">
     <%= t('Building services design engineer STUB') %>
   </label>
-  <span id="more-detail-hint" class="govuk-hint">
-    For example, the apprenticeship standard, level and specific requirements fromn the training provider.
-  </span>
 </div> 
- <%= link_to t('.Continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<br/>
+<br/>
+</div>
+ <%= link_to t('Add requirements and find training providers'), 'requirements', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<br/>
+Summary of this apprenticeship standard
+<br/>
+Level 6
+<br/>
+Length 60 months
+<br/>
+Max funding 27000
+<br/>
+Course ID ST0372
+<br/>
+Number of providers 8
+<br/>
+Entry Requirements Candidates will have at least 3 A levels at grades A* to C including maths and physical sciene or have completed a level 3 apprenticeship as a a builing services design technician.
+<br/>
+More Information The institution for Apprenticeships has more detailed information about this apprenticeship.:w::?:
+<br/>
+
 <% end %>
+</div>
