--- a/app/views/apprenticeships/home/find_apprentices.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices.html.erb
@@ -20,4 +20,6 @@
       </div>
 </div>
 <br/>
- <%= link_to t('.Continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<br/>
+<%= link_to t('Continue'), 'find_apprentices2' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+</div>
