--- a/app/views/apprenticeships/home/find_apprentices2.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices2.html.erb
@@ -18,6 +18,6 @@
 	         No
         </label>
       </div>
-</div>
 <br/>
- <%= link_to t('Continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<%= link_to t('Continue'), 'find_apprentices3' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+</div>
