--- a/app/views/apprenticeships/home/find_apprentices3.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices3.html.erb
@@ -1,7 +1,10 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+ 
+  <%= form_tag apprenticeships_search_results_path, method: :get do %>
 
   <label class="govuk-label govuk-label--m" for="search">
     <%= t('.Briefly outline your training requirements') %>
@@ -11,5 +14,8 @@
   </span>
   <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
 </div> 
- <%= link_to t('.Continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+<br/>
 <% end %>
+</div> 
+<%= link_to t('Continue'), 'find_apprentices4' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+</div> 
