--- a/app/views/apprenticeships/home/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices4.html.erb
@@ -31,7 +31,6 @@
   <input class="govuk-input" id="event-name" name="event-name" type="text">
 <br/>
 <br/>
+<%= link_to t('Search'), 'find_apprentices5' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
 
-
- <%= link_to t('.Search'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
 <% end %>
