--- a/app/views/apprenticeships/home/find_apprentices5.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices5.html.erb
@@ -28,8 +28,9 @@
    <label class="govuk-label" for="event-name">
     Keyword search
    </label>
+  <br/>
   <input class="govuk-input" id="event-name" name="event-name" type="text">
- <%= link_to t('.Search'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('Building') %>
+ <%= link_to t('.Search'), 'search_results', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('Building') %>
    </section>
  <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="browse-route">
         <h2 class="govuk-heading-l"><%= t('.provider_information_title') %></h2>
@@ -55,7 +56,8 @@
                 </div>
         <ul class="govuk-list govuk-list--bullet">
         </ul>
- <%= link_to t('.Browse'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('Building') %>
+<%= link_to t('Continue'), 'find_apprentices6' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.Continue') %>
+
       </section>
 
 
