--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -216,10 +216,38 @@ body.js-enabled .CCS-AT-results-filters .CCS-AT-checkbox-accordian {
 
 .css-at-results-list {
     list-style: none; 
+    padding: 0; 
 
     li {
-        display: block; 
+        float: left; 
+        clear: left; 
         width: 100%; 
+        padding: govuk-spacing(2) 0; 
+        border-bottom: 1px solid $govuk-border-colour; 
+
+        &:first-child {
+            border-top: 1px solid $govuk-border-colour; 
+        }
+
+        & > div + div {
+            padding: 0; 
+        }
+    }
+
+    .CCS-at-results-list__providers {
+        
+        
+
+        span {
+            width: 100%; 
+            display: block; 
+            font-weight: bold; 
+        }
+        
+        span span {
+            background: yellow; 
+            font-weight: 700; 
+        }
     }
 }
 
