--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -70,3 +70,17 @@ $govuk-heading-l: 27px;
 $govuk-link-colour: #007194;
 $govuk-link-hover-colour: #2b8cc4;
 $govuk-link-visited-colour: #4c2c92;
+
+
+
+
+
+
+/* global across framework styles: start */
+
+.CSS-no-underline {
+  text-decoration: none; 
+}
+
+
+/* global across framework styles: end */
