--- a/app/views/home/landing_page.html.erb
+++ b/app/views/home/landing_page.html.erb
@@ -12,7 +12,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/supply-teachers" class="govuk-link--no-visited-state">Find supply teachers and agency workers</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/supply-teachers" class="govuk-link--no-visited-state CSS-no-underline">Find supply teachers and agency workers</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Allows users across the public education secytor to select agencies and other organisations to provide supply teachers</p>
 
@@ -22,7 +24,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/management_consultancy" class="govuk-link--no-visited-state">Find management consultancy services</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/management_consultancy" class="govuk-link--no-visited-state CSS-no-underline">Find management consultancy services</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Allow the public sector to buy single assignments for business consultancy services</p>
 
@@ -32,7 +36,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/facilities_management" class="govuk-link--no-visited-state">Find facilities management services suppliers</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/facilities_management" class="govuk-link--no-visited-state CSS-no-underline">Find facilities management services suppliers</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">A guided experience to direct the user to the most appropriate and competitive suppliers. Allows contract award up to &pound;1.5<abbr>m</abbr></p>
 
@@ -42,7 +48,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/apprenticeships" class="govuk-link--no-visited-state">Find apprenticeship training services</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/apprenticeships" class="govuk-link--no-visited-state CSS-no-underline">Find apprenticeship training services</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Allow public sector apprentice managers to find an approved supplier to provide training and to allow suppliers too big to provide courses</p>
 
@@ -52,7 +60,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/legal_services" class="govuk-link--no-visited-state">Find legal services</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/legal_services" class="govuk-link--no-visited-state CSS-no-underline">Find legal services</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Provision of national and regional legal services and specialisms in property, construction, trainsport, rail and low cost drafting services</p>
 
@@ -62,7 +72,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/book_travel" class="govuk-link--no-visited-state">Book travel</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/book_travel" class="govuk-link--no-visited-state CSS-no-underline">Book travel</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">A service to allow users to book travel from multiple travel providers. Provide customers with travel data</p>
 
@@ -72,7 +84,9 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/gov_switch" class="govuk-link--no-visited-state">Gov Switch</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/gov_switch" class="govuk-link--no-visited-state CSS-no-underline">Gov Switch</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Allow users to switch electricity and gas suppliers. Water and fuels to be added later</p>
 
@@ -83,7 +97,9 @@
 
       <div class="govuk-grid-row  govuk-!-margin-bottom-9">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m CSS-no-underline"><a href="/school_switch" class="govuk-link--no-visited-state">School Switch</a></h2>
+          <h2 class="govuk-heading-m">
+            <a href="/school_switch" class="govuk-link--no-visited-state CSS-no-underline">School Switch</a>
+          </h2>
 
           <p class="govuk-body govuk-!-padding-left-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor maximus aliquam. Sed fringilla nibh orci, eu consectetur leo cursus at</p>
 
