--- a/app/views/apprenticeships/home/sorry.html.erb
+++ b/app/views/apprenticeships/home/sorry.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, t('.page_title') %>
+pe<%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
