--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -116,7 +116,8 @@ the import call to the parent GOVUK component) */
 
         .govuk-checkboxes__label {
             padding: 5px; 
-            font-size: $results-filters-labels-m;
+            font-size: $results-filters-labels-m; 
+            width: 100%; 
         }
 
         .govuk-checkboxes__item { 
@@ -128,6 +129,10 @@ the import call to the parent GOVUK component) */
                 border-top: none; 
             }
         } 
+
+        .govuk-input {
+            border-width: 1px; 
+        }
 
         .govuk-details__text {
             font-size: $results-filters-labels-m;
@@ -214,46 +219,96 @@ body.js-enabled .CCS-AT-results-filters .CCS-AT-checkbox-accordian {
     }
 }
 
-.css-at-results-list {
-    list-style: none; 
-    padding: 0; 
+.CCS-AT-search-results {
 
-    li {
-        float: left; 
+    .CCS-AT-search-results__sort {
+        float: right; 
         clear: left; 
-        width: 100%; 
-        padding: govuk-spacing(2) 0; 
-        border-bottom: 1px solid $govuk-border-colour; 
+        margin: 0 0 govuk-spacing(6) 0; 
 
-        &:first-child {
-            border-top: 1px solid $govuk-border-colour; 
+        .govuk-label {
+            display: inline-block; 
+            font-weight: bold; 
+            margin-right: 10px; 
         }
 
-        & > div + div {
-            padding: 0; 
+        .govuk-select {
+            min-width: 190px; 
+            border-width: 1px; 
+            border-radius: 5px; 
         }
+        
     }
 
-    .CCS-at-results-list__providers {
-        
-        
+    ul.CCS-AT-results-list {
+        list-style: none; 
+        padding: 0; 
+        clear: left; 
 
-        span {
+        li.govuk-list {
+            float: left; 
+            clear: left; 
             width: 100%; 
-            display: block; 
-            font-weight: bold; 
+            padding: govuk-spacing(2) 0; 
+            margin: 0; 
+            border-bottom: 1px solid $govuk-border-colour; 
+
+            &:first-child {
+                border-top: 1px solid $govuk-border-colour; 
+            } 
+
+            & > div {
+                padding: 0; 
+            }
+
+            a {
+                margin: 0; 
+            }
         }
-        
-        span span {
-            background: yellow; 
-            font-weight: 700; 
+
+        .CCS-AT-results-list__providers {
+            
+            div {
+
+                float: right; 
+
+                span {
+                    width: 100%; 
+                    display: block; 
+                    font-weight: bold; 
+                    
+                }
+                
+                span span {
+                    font-weight: 700; 
+                }
+            }
+
         }
+
+        .CCS-AT-results-list__details {
+            list-style: none; 
+            padding: 0; 
+            margin: govuk-spacing(2) 0 0 0; 
+            width: 100%; 
+
+            li {
+                margin: 0;
+                padding: 0; 
+            }
+        }
+
+    }
+
+}
+
+@media (max-width: 641px) {//mobile
+    .CCS-AT-search-results ul.CCS-AT-results-list .CCS-AT-results-list__providers div span span {
+        display: inline; 
     }
 }
 
 
-//-webkit-transform: rotate(-45deg);
-//-ms-transform: rotate(-45deg);
 
 #main-content {
     min-height: 330px; 
@@ -264,12 +319,12 @@ body.js-enabled .CCS-AT-results-filters .CCS-AT-checkbox-accordian {
     display: none; 
 }
 
- .CCS-search-icon {
-     display: block; 
-     //::after icon over input
- }
+.CCS-search-icon {
+    display: block; 
+    //::after icon over input
+}
 
-.CSS-no-underline {
+.CCS-no-underline {
     text-decoration: none; 
 
     /*&:hover {
@@ -277,11 +332,20 @@ body.js-enabled .CCS-AT-results-filters .CCS-AT-checkbox-accordian {
     }*/
 }
 
-.CSS-remove {
+.CCS-AT-remove {
     display: block; 
     position: absolute; 
     left: -3000px; 
     top: -3000px; 
+}
+
+.CCS-AT-next {
+    text-decoration: none !important; 
+    padding: govuk-spacing(4) 0; 
+    display: block; 
+    width: 100%; 
+    text-align: right; 
+    clear: left; 
 }
 
 
