--- a/app/views/apprenticeships/home/_search_apprenticeship.html.erb
+++ b/app/views/apprenticeships/home/_search_apprenticeship.html.erb
@@ -1,14 +1,17 @@
-<li>
+<li class="govuk-list">
   <div class="govuk-grid-column-two-thirds">
-    <a href="/" class="govuk-heading-s govuk-link--no-visited-state CSS-no-underline"><%= result[:name] %></a><br>
-
-    <b>[[ <%= t('apprenticeships.home.search_results.result_level_label') %></b>]] <br>
-    <%= result[:level] %>
+    <a href="/" class="govuk-heading-s govuk-link--no-visited-state CCS-no-underline"><%= result[:name] %></a>
+    <ul class="CCS-AT-results-list__details">
+      <li class="govuk-grid-column-one-third"><b><%= t('apprenticeships.home.search_results.result_level_label') %></b> <%= result[:level] %></li>
+    </ul>
   </div>
 
-  <div class="govuk-grid-column-one-third govuk-body CCS-at-results-list__providers">
-    <span class="govuk-!-font-size-16">
-      <span class="govuk-!-font-size-27"><%= result[:providers] %></span> <%= t('apprenticeships.home.search_results.providers_label') %>
+  <div class="govuk-grid-column-one-third CCS-AT-results-list__providers">
+    <div>
+      <span class="govuk-!-font-size-16">
+        <span class="govuk-!-font-size-27"><%= result[:providers] %></span> 
+        <%= t('apprenticeships.home.search_results.providers_label') %>
       </span>
+    </div>
   </div>
 </li>
