--- a/app/views/facilities_management/long_list/longList.html.erb
+++ b/app/views/facilities_management/long_list/longList.html.erb
@@ -1,4 +1,4 @@
-<a href="/facilities-management/select-services" class="govuk-back-link">Back</a>
+<a href="/facilities-management/select-services" class="govuk-back-link ccs-no-print">Back</a>
 
 <div id="-error-message" name="longList-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
@@ -16,7 +16,7 @@
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
     <strong class="govuk-heading-xl"> Supplier results</strong>
-    <div class="govuk-inset-text">
+    <div class="govuk-inset-text ccs-no-print">
       <strong>On this page</strong><br>
       <span>Based on your choices, we are showing suppliers in three different groups.</span>
    </div>
@@ -27,13 +27,13 @@
 
   <!-- Start of filter section -->
   <div class="govuk-grid-row">
-    <a id="filter-toggle-btn" id="filter-toggle-btn" href="" class="govuk-button" role="button">Hide filters</a><br>
+    <a id="filter-toggle-btn" id="filter-toggle-btn" href="" class="govuk-button ccs-no-print" role="button">Hide filters</a><br>
     <div id="fm-filter-pane" class="govuk-grid-column-one-third">
       <div class="govuk-!-padding-2 CCS-fm-supplier-filter-container">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-half"><strong class="govuk-heading-m">Apply filters</strong></div>
+          <div class="govuk-grid-column-one-half"><strong class="govuk-heading-m ccs-no-print">Apply filters</strong></div>
           <div class="govuk-grid-column-one-half">
-            <a href="<%= @select_FM_locations %>" class="remove-all" >Clear filters</a></div>
+            <a href="<%= @select_FM_locations %>" class="remove-all ccs-no-print" >Clear filters</a></div>
         </div>
         <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
           <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
@@ -41,7 +41,7 @@
           </div>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half"><strong id="region-count" class="govuk-heading-s">2 selected</strong></div>
-            <div class="govuk-grid-column-one-half"><a href="<%= @select_FM_locations %>">Change region</a></div>
+            <div class="govuk-grid-column-one-half ccs-no-print"><a href="<%= @select_FM_locations %>">Change region</a></div>
           </div>
           <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
             <div id="fm-region-check-boxes" class="govuk-checkboxes"></div>
@@ -53,7 +53,7 @@
           </div>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half"><strong id="service-count" class="govuk-heading-s">2 selected</strong></div>
-            <div class="govuk-grid-column-one-half"><a href="<%= @select_FM_services %>">Change service</a></div>
+            <div class="govuk-grid-column-one-half ccs-no-print"><a href="<%= @select_FM_services %>">Change service</a></div>
           </div>
           <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
             <div id="fm-service-check-boxes" class="govuk-checkboxes"></div>
@@ -118,16 +118,16 @@
       </div>
     </div>
   </div>
-  <div class="govuk-grid-row">
+  <div class="govuk-grid-row ccs-no-print">
     <div class="govuk-inset-text">
       <strong>Next steps</strong><br>
       <span>We will now ask you questions about your procurement, buildings and costs.</span><br>
       <span>You can open a competition for suppliers after you have received an assessed value from us.</span>
     </div>
 
-    <a id="suppliers-continue-button" href="/facilities-management/select-locations" class="govuk-button" role="button">Continue</a><br>
+    <a id="suppliers-continue-button" href="/facilities-management/select-locations" class="govuk-button ccs-no-print" role="button">Continue</a><br>
     <p>
-      <a id="FM-print-supplier-list" role="button" class="supplier-record__print-option" href="" >Print this page</a>
+      <a id="FM-print-supplier-list" role="button" class="supplier-record__print-option ccs-no-print" href="" >Print this page</a>
     </p>
   </div>
 </div>
