--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,10 +58,10 @@
             <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
               <% if logged_in? %>
               <li class="govuk-header__navigation-item">
-                <%= link_to 'Back to start', supply_teachers_path, class: 'govuk-header__link' %>
+                <%= link_to 'Back to start', supply_teachers_path, class: 'govuk-header__link ccs-no-print' %>
               </li>
               <li class="govuk-header__navigation-item">
-                  <%= button_to "Sign out", sign_out_path, class: 'ccs-header__signout' %>
+                  <%= button_to "Sign out", sign_out_path, class: 'ccs-header__signout ccs-no-print' %>
               </li>
               <% end %>
             </ul>
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <footer class="govuk-footer" role="contentinfo">
+  <footer class="govuk-footer ccs-no-print" role="contentinfo">
     <% if Marketplace.support_email_address.present? %>
       <div class="footer-feedback govuk-!-padding-1">
         <div class="govuk-width-container">
