--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -82,5 +82,9 @@ $govuk-link-visited-colour: #4c2c92;
   text-decoration: none; 
 }
 
+abbr[title]{
+  text-decoration: none; 
+}
+
 
 /* global across framework styles: end */
